--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -485,6 +485,103 @@
 	    padding-left: 0 !important;
 	}
 
+	/* Become a campaign partnet */
+	.become-partner-text{	
+		width: 100%;
+	}
+
+	.node-type-article article .field-name-body.field-type-text-with-summary .become-partner .coments .col-sm-12.col-md-12.col-xs-12{
+		display: block;
+	}
+
+	.how-to-apply {
+	    background: url(../images/background-timeline-mobile.png) repeat-y;
+	    color: #FFF;
+	    text-align: center;
+	    float: left;
+	    width: 100%;
+	   	height: 736px;
+
+		> div.boxes > div:nth-child(1){
+			position: absolute;
+			left: 100px;
+	    	top: 17px;
+		}
+
+		> div.boxes > div:nth-child(2){
+			position: absolute;
+			left: 100px;
+			top: 265px;
+		}
+
+		> div.boxes > div:nth-child(3){
+			position: absolute;
+			left: 100px;
+			top: 487px;
+		}
+	}
+
+	.timeline{
+		width: 100%;
+	    text-align: center;
+	    float: left;
+	    display: flex;
+	    flex-wrap: wrap;
+	    justify-content: center;
+	    background: url(../images/timeline-dots-vertical.png) repeat-y 11% 0;
+	    padding-top: 70px;
+	    padding-bottom: 1em;
+	    position: relative;
+	    height: 100%;
+	    > div {
+			float: left;
+		}
+		> div:nth-child(1), > div:nth-child(3), > div:nth-child(5){
+			background: #0030a0;
+			border-radius: 25px;
+			width: 27px;
+	    	border: 3px solid #FFF;
+		}
+
+		> div:nth-child(1){
+			    position: absolute;
+    			left: 28px;
+    			top: 70px;
+	    }
+
+	    > div:nth-child(2){
+			position: absolute;
+	    	left: 101px;
+    		top: 193px;
+	    	&:after{
+	    		left: -67px;
+    			top: 3px;
+	    	}
+	    }
+
+	    > div:nth-child(3){
+			position: absolute;
+	    	left: 28px;
+	    	top: 318px;
+	    }
+
+	    > div:nth-child(4){
+			left: 68px;
+    		top: 425px;
+	    	&:after{
+	    		left: -35px;
+    			top: 3px;
+	    	}
+	    }
+
+	    > div:nth-child(5){
+			position: absolute;
+	    	left: 28px;
+    		top: 535px;
+	    }
+	} 
+	
+
 }
 
 
