--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -364,7 +364,6 @@
 }
 
 
-
 @media (max-width: 1200px) and (min-width: 990px) {
 	.page-tools-and-publications{
 		#edit-left-column{
@@ -384,6 +383,7 @@
 	    width: 96.1%!important;
 	}
 }
+
 
 @media (max-width: 1024px){
 
@@ -501,7 +501,7 @@
 				}
 			}
 		}
-}
+	}
 
 	.footer{
 		div.container{
@@ -516,6 +516,7 @@
 		}
 	}
 }
+
 
 @media (max-width: 1200px){
 
@@ -542,6 +543,30 @@
 
 	.page-publications #content, .page-events #content{
 		margin-top: 0;
+	}
+
+	.how-to-apply > div.boxes > div:nth-child(2) {
+	    position: absolute;
+	    left: 41%;
+	    top: 73px;
+	}
+
+}
+
+
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) { 
+	/* iPad */
+
+	.how-to-apply > div.boxes > div:nth-child(1) {
+    	left: 4%;
+    }
+
+	.how-to-apply > div.boxes > div:nth-child(2) {
+	    left: 36.5%;
+	}
+
+	.how-to-apply > div.boxes > div:nth-child(3) {
+	    right: 0%;
 	}
 
 }
