--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -82,11 +82,6 @@ body .more-link{
 	}
 }
 
-.more-link.flex{
-	display: flex;
-    justify-content: center;
-}
-
 .btn-background-transparent{
 	background: transparent;
 	width: 208px;
@@ -3631,21 +3626,213 @@ div.workbench-info-block{
 
 .node-type-article article .field-name-body.field-type-text-with-summary{
 	.become-partner{
+
+		.coments{
+			.col-sm-12.col-md-12.col-xs-12{
+				display: flex;
+    			flex-direction: row;
+    			justify-content: center;
+			}
+		}
+
 		.coments .col{
+			display: flex;
+    		flex-direction: column;
+			
 			h2{
 				color: #0030a0;
 			}
+			
 			h2.present-yourself:before {
 			    background-image: url(../images/content/gain-visibility.png);
 			}
+			
 			h2.promote:before {
 			    background-image: url(../images/content/promote-your-news.png);
 			}
+			
 			h2.networking:before {
 			    background-image: url(../images/content/extend-your-network.png);
 			}
+
+			p{
+				margin-bottom: 0;
+			}
+
+			.more-link{
+				margin-top: auto;
+				display: flex;
+    			justify-content: center;
+    			a{
+    				font-size: 0.9em;
+    			}
+    		}    
+
 		}
 	}
 
 }
 
+.how-to-apply{
+	background: url('../images/background-timeline.png') no-repeat;
+	color:#FFF;
+	text-align: center;
+	float: left;
+	width: 100%;
+	height: 392px;
+	h3{
+		padding-bottom: 1em;
+	}
+	.boxes{
+		position: relative;
+		.box{
+			width: 184px;
+			border: 2px solid #8ea64b;
+			background: #FFF;
+			height: auto;
+			padding-bottom: 1em;
+			margin-right: 2em;
+			border-radius: 5px;
+			div{
+				text-align: left;
+				padding-left: 10px;
+				.btn-become-partner-download{
+					background: url(../images/download-timeline.png) no-repeat 93% 40%;
+					text-align: left;
+					border: 1px solid #0030a0;
+					color: #0030a0;
+					padding-left: 5px;
+					padding-right: 35px;
+					border-radius: 3px;
+				}
+			}
+			
+		}
+
+		.box.inactive{
+			background: #efeff0;
+			border: 2px solid #b0b1b2;
+			h4, p{
+				color:#b0b1b2;
+			}
+		}
+
+		h3{
+			font-size: 2em;
+			padding-bottom: 0;
+		}
+
+		h4{
+			font-size: 1em;
+		    text-align: left;
+		    padding-left: 10px;
+		    color: #0030a0;
+		}
+
+		p{
+			color:#333;
+			font-size: 0.8em;
+			padding-left: 10px;
+			padding-right: 10px;
+			text-align: left;
+		}
+	}
+
+	> div.boxes > div:nth-child(1){
+		position: absolute;
+		left: 8%;
+    	top: 73px;
+	}
+
+	> div.boxes > div:nth-child(2){
+		position: absolute;
+		left: 43%;
+		top: 73px;
+	}
+
+	> div.boxes > div:nth-child(3){
+		position: absolute;
+		right: 4%;
+		top: 73px;
+	}
+	
+}
+
+.timeline{
+	width: 100%;
+    text-align: center;
+    float: left;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    background: url(../images/timeline-dots.png) repeat-x 50%;
+    padding-top: 70px;
+    padding-bottom: 1em;
+    position: relative;
+    > div {
+		float: left;
+	}
+	> div:nth-child(1), > div:nth-child(3), > div:nth-child(5){
+		background: #0030a0;
+		border-radius: 25px;
+		width: 27px;
+    	border: 3px solid #FFF;
+	}
+
+	> div:nth-child(1){
+		position: absolute;
+    	left: 15%;
+    	top: 29px;
+    }
+
+    > div:nth-child(2){
+		position: absolute;
+    	left: 30%;
+    	top: 9px;
+    	font-weight: bold;
+    	&:after{
+    		content:' ';
+    		display: block;
+    		width: 15px;
+    		height: 15px;
+    		background: #0030a0;
+    		border-radius: 7px;
+    		border: 2px solid #FFF;
+    		position: absolute;
+    		left: 42%;
+    		top: 26px;
+    	}
+    }
+
+    > div:nth-child(3){
+		position: absolute;
+    	left: 49%;
+    	top: 29px;
+    }
+
+    > div:nth-child(4){
+		position: absolute;
+    	right: 30%;
+    	top: 9px;
+    	font-weight: bold;
+    	&:after{
+    		content:' ';
+    		display: block;
+    		width: 15px;
+    		height: 15px;
+    		background: #0030a0;
+    		border-radius: 7px;
+    		border: 2px solid #FFF;
+    		position: absolute;
+    		left: 42%;
+    		top: 26px;
+    	}
+    }
+
+    > div:nth-child(5){
+		position: absolute;
+    	right: 15%;
+    	top: 29px;
+    }
+} 
+	
