--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -485,11 +485,6 @@
 	    padding-left: 0 !important;
 	}
 
-	/* Become a campaign partnet */
-	.become-partner-text{	
-		width: 100%;
-	}
-
 	.node-type-article article .field-name-body.field-type-text-with-summary .become-partner .coments .col-sm-12.col-md-12.col-xs-12{
 		display: block;
 	}
@@ -523,16 +518,16 @@
 
 	.timeline{
 		width: 100%;
+		height: 654px;
 	    text-align: center;
 	    float: left;
 	    display: flex;
 	    flex-wrap: wrap;
 	    justify-content: center;
-	    background: url(../images/timeline-dots-vertical.png) repeat-y 11% 0;
+	    background: url(../images/timeline-dots-vertical.png) repeat-y 39px 0;
 	    padding-top: 70px;
 	    padding-bottom: 1em;
 	    position: relative;
-	    height: 100%;
 	    > div {
 			float: left;
 		}
@@ -566,10 +561,12 @@
 	    }
 
 	    > div:nth-child(4){
-			left: 68px;
-    		top: 425px;
+			position: absolute;
+	    	left: 101px;
+    		top: 429px;
+    		right: auto;
 	    	&:after{
-	    		left: -35px;
+	    		left: -67px;
     			top: 3px;
 	    	}
 	    }
