--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -3508,6 +3508,7 @@ div.workbench-info-block{
 }
 
 
+
 .node-type-partner{
 	[class*="field-type-link"]{
 			font-weight: bold;
@@ -3617,9 +3618,6 @@ div.workbench-info-block{
 /* Become a campaign partner */
 
 .become-partner-text{
-	width: 56%;
-    display: block;
-    margin: 0 auto;
     text-align: center;
     padding-bottom: 1em;
 }
@@ -3665,6 +3663,8 @@ div.workbench-info-block{
     			justify-content: center;
     			a{
     				font-size: 0.9em;
+    				padding-bottom: 5px;
+    				padding-top: 5px;
     			}
     		}    
 
@@ -3704,6 +3704,7 @@ div.workbench-info-block{
 					padding-left: 5px;
 					padding-right: 35px;
 					border-radius: 3px;
+					text-decoration: none;
 				}
 			}
 			
@@ -3746,13 +3747,13 @@ div.workbench-info-block{
 
 	> div.boxes > div:nth-child(2){
 		position: absolute;
-		left: 43%;
+		left: 42%;
 		top: 73px;
 	}
 
 	> div.boxes > div:nth-child(3){
 		position: absolute;
-		right: 4%;
+		right: 5%;
 		top: 73px;
 	}
 	
@@ -3787,7 +3788,7 @@ div.workbench-info-block{
 
     > div:nth-child(2){
 		position: absolute;
-    	left: 30%;
+    	left: 29%;
     	top: 9px;
     	font-weight: bold;
     	&:after{
@@ -3812,7 +3813,7 @@ div.workbench-info-block{
 
     > div:nth-child(4){
 		position: absolute;
-    	right: 30%;
+    	right: 27%;
     	top: 9px;
     	font-weight: bold;
     	&:after{
