--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -142,6 +142,7 @@ body .more-link:before {
 }
 .panels-flexible-row h2 {
   font-style: normal;
+  font-weight: 500;
   clear: both;
   padding-bottom: 15px;
 }
@@ -2937,6 +2938,93 @@ div.workbench-info-block {
   font-style: italic;
   color: #FFF;
 }
+/*OCP mission statement*/
+body.ocp .box-type-partner {
+  width: 100%;
+  background: url('../images/background-fop.png') no-repeat;
+  background-size: cover;
+  border-radius: 15px;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  padding-bottom: 10px;
+}
+body.ocp .box-type-partner .pane-title {
+  color: #FFF;
+  font-size: 1.4em;
+  padding-left: 15px;
+  padding-top: 10px;
+  font-style: normal;
+}
+body.ocp .box-type-partner .pane-content {
+  padding: 1em;
+  padding-left: 1em;
+  padding-right: 1em;
+  font-style: italic;
+  color: #FFF;
+}
+body.ocp .box-type-partner .field-name-field-ceo-photo {
+  width: 100px;
+  height: 100px;
+  float: left;
+  margin-top: 10px;
+  margin-left: 10px;
+  background: #FFF;
+  border-radius: 8px;
+}
+body.ocp .box-type-partner .field-name-field-ceo-photo img {
+  border: 2px solid #d9e996;
+  border-radius: 7px;
+}
+body.ocp .box-type-partner .pane-node-field-ceo {
+  font-size: 1.5em;
+  font-weight: bold;
+  padding-left: 145px;
+}
+body.ocp .box-type-partner .pane-node-field-ceo .pane-content {
+  padding: 0;
+  font-style: normal;
+}
+body.ocp .box-type-partner .pane-node-field-position-identifier {
+  padding-left: 145px;
+  padding-top: 5px;
+}
+body.ocp .box-type-partner .pane-node-field-position-identifier .pane-content {
+  padding: 0;
+  font-style: normal;
+}
+body.ocp .box-type-partner .pane-node-field-quote {
+  clear: both;
+  padding-left: 10px;
+}
+body.ocp .panels-flexible-column-first .pane-node-field-mission-statement,
+body.ocp .panels-flexible-column-first .pane-node-field-pledge {
+  background: transparent;
+  background-size: initial;
+  margin-top: 1em;
+  border-radius: 15px;
+  margin-bottom: 1em;
+}
+body.ocp .panels-flexible-column-first .pane-node-field-mission-statement .pane-title,
+body.ocp .panels-flexible-column-first .pane-node-field-pledge .pane-title {
+  float: none;
+  color: #003399;
+  font-weight: 500;
+  font-size: 1.5em;
+  padding: 0 0 10px 0;
+}
+body.ocp .panels-flexible-column-first .pane-node-field-mission-statement .pane-content,
+body.ocp .panels-flexible-column-first .pane-node-field-pledge .pane-content {
+  padding: 1em;
+  padding-left: 1em;
+  padding-right: 1em;
+  font-style: normal;
+  color: #000;
+  padding: 0;
+}
+body.ocp .panels-flexible-row-partner_detail-16-inside .panels-flexible-region-first {
+  float: right;
+  padding-right: 0;
+}
 .panels-flexible-row .hwc-share-widget {
   float: right;
 }
@@ -2977,11 +3065,49 @@ div.workbench-info-block {
   float: left;
   width: 60%;
 }
-.panels-flexible-region .view-partner-content .views-row {
-  padding: 0;
-}
-.panels-flexible-region .pane-node-field-website {
+.panels-flexible-region .pane-node-field-main-contact {
   clear: both;
+}
+.panels-flexible-region .pane-node-field-orgtype .pane-title {
+  float: left;
+  text-transform: uppercase;
+  border: 2px solid #d9e996;
+  border-radius: 5px;
+  padding: 3px 8px;
+  color: #003399;
+  font-weight: 600;
+  margin-right: 10px;
+}
+.panels-flexible-region .pane-node-field-orgtype .pane-content {
+  float: left;
+  color: #333;
+}
+.panels-flexible-region .pane-node-field-orgtype .pane-content .field-name-field-orgtype {
+  padding-top: 4px;
+  font-weight: normal;
+}
+.panels-flexible-region .pane-node-field-bussines-sector {
+  float: right;
+  padding-top: 0 !important;
+  margin-right: 2em;
+}
+.panels-flexible-region .pane-node-field-bussines-sector .pane-title {
+  float: left;
+  text-transform: uppercase;
+  border: 2px solid #d9e996;
+  border-radius: 5px;
+  padding: 3px 8px;
+  color: #003399;
+  font-weight: 600;
+  margin-right: 10px;
+}
+.panels-flexible-region .pane-node-field-bussines-sector .pane-content {
+  float: left;
+  color: #333;
+}
+.panels-flexible-region .pane-node-field-bussines-sector .pane-content .field-type-taxonomy-term-reference {
+  padding-top: 4px;
+  font-weight: normal;
 }
 .panels-flexible-region .field-name-field-abbreviation-name,
 .panels-flexible-region .field-name-field-orgtype,
@@ -3002,10 +3128,12 @@ div.workbench-info-block {
 .panels-flexible-region .pane-node-field-ph-address {
   padding-top: 1em;
 }
-.panels-flexible-region .pane-node-field-general-phone {
+.panels-flexible-region .pane-node-field-general-phone,
+.panels-flexible-region .pane-node-field-organisation-rep {
   padding-top: 10px;
 }
-.panels-flexible-region .pane-node-field-general-phone .pane-title {
+.panels-flexible-region .pane-node-field-general-phone .pane-title,
+.panels-flexible-region .pane-node-field-organisation-rep .pane-title {
   color: #333;
   font-size: 1em;
   float: left;
@@ -3073,7 +3201,7 @@ div.workbench-info-block {
   float: none;
   color: #003399;
   font-weight: bold;
-  font-size: 1.5em;
+  font-size: 1.2em;
   padding-bottom: 10px;
 }
 .panels-flexible-column-last .field-name-title-field {
@@ -3097,7 +3225,7 @@ div.workbench-info-block {
   text-align: left;
 }
 .node-type-partner [class*="field-type-link"][class*="facebook"] {
-  background: url("../images/content/facebook.png") no-repeat left center;
+  background: url("../images/header/header-ico-facebook.png") no-repeat left center;
   padding-left: 30px;
   margin-bottom: 1em;
   white-space: nowrap;
@@ -3109,7 +3237,7 @@ div.workbench-info-block {
   text-overflow: ellipsis;
 }
 .node-type-partner [class*="field-type-link"][class*="twitter"] {
-  background: url("../images/content/twitter.png") no-repeat left center;
+  background: url("../images/header/header-ico-twetter.png") no-repeat left center;
   padding-left: 30px;
   margin-bottom: 1em;
 }
@@ -3120,7 +3248,7 @@ div.workbench-info-block {
   text-overflow: ellipsis;
 }
 .node-type-partner [class*="field-type-link"][class*="slideshare"] {
-  background: url("../images/content/slideshare.png") no-repeat left center;
+  background: url("../images/header/header-ico-slideshare.png") no-repeat left center;
   padding-left: 30px;
   margin-bottom: 1em;
 }
@@ -3131,7 +3259,7 @@ div.workbench-info-block {
   text-overflow: ellipsis;
 }
 .node-type-partner [class*="field-type-link"][class*="youtube"] {
-  background: url("../images/content/youtube.png") no-repeat left center;
+  background: url("../images/header/header-ico-youtube.png") no-repeat left center;
   padding-left: 30px;
   margin-bottom: 1em;
 }
@@ -3142,7 +3270,7 @@ div.workbench-info-block {
   text-overflow: ellipsis;
 }
 .node-type-partner [class*="field-type-link"][class*="linkedin"] {
-  background: url("../images/content/linkedin.png") no-repeat left center;
+  background: url("../images/header/header-ico-linkedin.png") no-repeat left 2px;
   padding-left: 30px;
   margin-bottom: 1em;
 }
